styles/globals.css
/* ... */
/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background: var(--clr-grey-10);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none !important;
}
h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem !important;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  global classes */

/* section */
.section {
  width: 90vw;
  margin: 0 auto;
  max-width: var(--max-width);
}

@media screen and (min-width: 992px) {
  .section {
    width: 95vw;
  }
}

/*!---------------------------------  */

/*
=============== 
Stripe Styles
===============
*/
.nav {
  height: 5rem;
  z-index: 1;
  position: relative;

  display: flex;
  align-items: center;
  justify-content: center;
}
.nav-center {
  width: 90vw;
  max-width: var(--max-width);
}
.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav-logo {
  width: 120px;
}

.btnGroup {
  display: flex;
  gap: 1rem;
}
.btnNav {
  font-size: 1rem;
  padding: 0.5rem 0.75rem;
  border-radius: var(--radius);
  border-color: transparent;
  color: white;
  background: var(--clr-black);
  cursor: pointer;
  transition: var(--transition);
}
.btn:hover {
  background: var(--clr-grey-5);
}
.nav-links {
  display: none;
}
.signIn-btn {
  background-color: #363636;
  color: #eee;
  display: none;
}
.signUp-btn {
  background-color: #017efa;
  display: none;
}
.hero::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 65%;
  top: 0;
  left: 0;
  /* background: url(/hero.jpg);
  background-size: cover;
  background-repeat: no-repeat; */
  z-index: -1;
}
.hero {
  position: relative;
  min-height: 100vh;
  margin-top: -5rem;
  display: flex;
  /* grid-template-columns: 1fr; */
  align-items: center;
  justify-content: center;

  background: url(/hero.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}
.hero-center {
  width: 90vw;
  max-width: var(--max-width);
  display: grid;
  align-items: center;
}

.hero-info h1 {
  text-align: center;
  margin-top: 8rem;
  color: var(--clr-grey-10);
  text-transform: none;
  width: 100%;
  margin-bottom: 2rem;
}
.hero-info p {
  color: var(--clr-grey-9);
  /* max-width: 35em; */
  line-height: 1.8;
  text-align: center;
}
.hero-images {
  display: none;
}

/* nav media query */
@media screen and (min-width: 800px) {
  .nav-center {
    display: grid;
    grid-template-columns: auto 1fr auto;
    align-items: center;
  }
  .toggle-btn {
    display: none;
  }
  .signIn-btn {
    display: inline-block;
  }
  .signUp-btn {
    display: inline-block;
  }
  .nav-links {
    text-align: center;
    height: 100%;
    margin-bottom: 0;

    display: flex;
    justify-self: center;
    align-items: center;
    gap: 1.75rem;
  }
  .nav-links li {
    height: 100%;
  }
  .link-btn {
    height: 100%;
    background: transparent;
    border-color: transparent;
    font-size: 0.9rem;
    text-transform: capitalize;
    letter-spacing: 1px;
    font-weight: 500;
  }
}

/* hero media query */
@media screen and (min-width: 800px) {
  .hero::before {
    background-size: contain;
    height: 100%;
  }
  /* .hero-center {
    grid-template-columns: 2fr 1fr;
  } */

  .hero-info h1 {
    font-size: 3rem;
  }
  .hero-info p {
    font-size: 1.25rem;
  }
  .hero-images {
    display: block;
    justify-self: center;
  }
  .phone-img {
    width: 12rem;
  }
}

@media screen and (min-width: 1200px) {
  .hero-center {
    /* grid-template-columns: 2fr 1fr; */
    /* align-items: end; */
    padding-bottom: 12vh;
  }
  .hero-info h1 {
    max-width: 100%;
    font-size: 5.5rem;
  }
  .hero-images {
    align-self: end;
  }
  .phone-img {
    width: 15rem;
  }
}
@media screen and (min-width: 1400px) {
  .hero-center {
    padding-bottom: 20vh;
  }
  .phone-img {
    width: 17rem;
  }
}

/* sidebar */
.sidebar-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  visibility: hidden;
  z-index: -1;
  transition: var(--transition);
  transform: scale(0);
  background: rgba(0, 0, 0, 0.5);
}
.sidebar-wrapper.show {
  visibility: visible;
  z-index: 2;
  transform: scale(1);
}
.sidebar {
  width: 90vw;
  height: 95vh;
  max-width: var(--fixed-width);
  background: var(--clr-white);
  border-radius: var(--radius);
  box-shadow: var(--dark-shadow);
  position: relative;
  padding: 4rem 2rem;
}
.close-btn {
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  color: var(--clr-grey-5);
  position: absolute;
  top: 1rem;
  right: 1rem;
  cursor: pointer;
}
.sidebar article {
  margin-bottom: 2rem;
}
.sidebar-sublinks {
  display: grid;
  grid-template-columns: 1fr 1fr;
  row-gap: 0.25rem;
}
.sidebar-sublinks a {
  display: block;
  color: var(--clr-grey-1);
  text-transform: capitalize;
  display: flex;
  align-items: center;
}
.sidebar-sublinks svg {
  color: var(--clr-grey-5);
  margin-right: 1rem;
}

@media screen and (min-width: 800px) {
  .sidebar-wrapper {
    display: none;
  }
}
/* ... */

